[package]
name = "nptv6-update-server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
clap-verbosity-flag = "2.0"
